# DLAI-shortcourse_notebooks

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
courses/C1 - How Transformer LLMs Work/notebooks/: L2.ipynb  L6.ipynb
courses/C2 - Attention in Transformers/notebooks/: Lesson_3.ipynb  Lesson_6.ipynb  Lesson_9.ipynb
courses/C3 -  How Diffision Models work/notebooks/: L2_Training.ipynb  L3_Context.ipynb  L4_FastSampling.ipynb
courses/C4 - Large Language Models with Semantic Search/notebooks/: L1-Keyword_Search.ipynb  L2-Embeddings.ipynb  utils.py
courses/C5 - Getting Started with Mistral/data/: AI_greenhouse_gas.txt
courses/C5 - Getting Started with Mistral/notebooks/: L2_prompting_capabilities.ipynb  L4_function_calling.ipynb  L5_basic_RAG.ipynb  L6_chat_ui.ipynb  helper.py
courses/C6 - Embedding Models from Architecture to Implementation/notebooks/: Lesson_2.ipynb  Lesson_3.ipynb  Lesson_4.ipynb  Lesson_5.ipynb
courses/C7 - Quantization Fundamentals with Hugging Face/notebooks/: L2_data_types.ipynb  L3_models_with_different_data_types.ipynb  L4_quantization_theory.ipynb  helper.py
courses/C8 - Open Source Models with Hugging Face/notebooks/: L2_NLP.ipynb  L3_Translation_and_Summarization.ipynb  L4_Sentence_Embeddings.ipynb  L5_Zero-Shot_Audio_Classification.ipynb  L7_Text_to_Speech.ipynb
courses/Structured_LLM_Output/notebooks/: L2.ipynb  L3.ipynb  L4.ipynb  L5.ipynb  utils.py
courses/dspy/notebooks/: L2-Signatures_modules_save.ipynb  L3-MLflow_DsPyTracking.ipynb  L4-Optimize.ipynb
(+2 files in other folders)
