[project]
name = "dlai-shortcourse-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspy>=2.6.27",
    "instructor>=1.9.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "mlflow>=3.1.1",
    "outlines==0.2.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "transformers>=4.53.1",
]
